# bazel-starlark-edge-transition-bug

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl
data/: 80_columns.txt
